
   o rotmean
   Rotational average of pixel values in an image

   o fardist
   Distance from each pixel/data point to farthest part of window boundary

   o circumradius.owin
   Circumradius of a window

   o rmax.Trans, rmax.Ripley
   Compute the maximum distance 'r' for which the 
   translation edge correction and isotropic edge correction   
   are valid.

SIGNIFICANT USER-VISIBLE CHANGES

   o Kest
   New option: correction="rigid" computes the rigid motion correction.

   o eval.fv
   Functions no longer need to have exactly the same sequence of 'r' values.
   They will now be made compatible using 'harmonise.fv'.

   o circumradius
   The function 'circumradius' is now generic, with methods
   for the classes 'owin' and 'linnet'.

   o edge.Trans
   New argument 'give.rmax' 

   o fvnames, plot.fv
   The symbol '.a' is now recognised. It stands for 'all function values'.

   o as.function.fv
   Argument 'extrapolate' can have length 1 or 2.

   o varblock
   New argument 'confidence' determines the confidence level.

   o $<-.fv
   This can now be used to add an extra column to an 'fv' object
   (previously it refused).

   o plot.fv
   Improved handling of 'shade' argument.


BUG FIXES

   o varblock
   Calculations were incorrect if more than one column of 
   edge corrections was computed. 
   [Bug introduced in spatstat 1.21-1, november 2010.]
   Fixed.

   o varblock
   Crashed if one of the quadrats contained no data points.
   Fixed.

   o lohboot
   Interval was calculated wrongly when global=TRUE and fun="Lest" or "Linhom".
   Fixed.

   o nnmark
   Crashed when at="points" if there was only a single column of marks.
   [Spotted by Shane Frank.]
   Fixed.

   o as.im.owin
   Crashed if X was a 1 x 1 pixel array.
   Fixed.

   o objects of class 'fv'
   Assigning a new value to names(x) or colnames(x) or dimnames(x)
   would cause the internal data format to become corrupted.
   Fixed.

   o to.grey, complementarycolour