@@ -920,6 +920,7 @@ export("is.expandable")
 export("is.expandable.ppm")
 export("is.expandable.rmhmodel")
 export("is.fv")
+export("is.grey")
 export("is.hole.xypolygon")
 export("is.hybrid")
 export("is.hybrid.interact")
